--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
       <div class="input-group input-group-lg">
         <input type="text" class="form-control" name="q" placeholder="Search ROS Packages">
         <span class="input-group-btn">
-          <button class="btn btn-default btn-lg" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+          <button class="btn btn-default btn-lg" type="submit" title="Search ROS Packages"><span class="glyphicon glyphicon-search"></span></button>
         </span>
       </div>
     </form>
